Add form validation, API fetching and more

--- a/index.html
+++ b/index.html
@@ -69,32 +69,32 @@
             <h2 class="section-title">Explore by Mood</h2>
             <div class="mood-grid">
                 <div class="mood-card" data-mood="happy">
-                    <div class="mood-icon">😊</div>
+                    <div class="mood-icon"></div>
                     <h3>Happy</h3>
                     <p>Feel-good comedies and uplifting stories</p>
                 </div>
                 <div class="mood-card" data-mood="sad">
-                    <div class="mood-icon">😢</div>
+                    <div class="mood-icon"></div>
                     <h3>Sad</h3>
                     <p>Emotional dramas that touch the heart</p>
                 </div>
                 <div class="mood-card" data-mood="excited">
-                    <div class="mood-icon">🤩</div>
+                    <div class="mood-icon"></div>
                     <h3>Excited</h3>
                     <p>Action-packed thrillers and adventures</p>
                 </div>
                 <div class="mood-card" data-mood="romantic">
-                    <div class="mood-icon">💕</div>
+                    <div class="mood-icon"></div>
                     <h3>Romantic</h3>
                     <p>Love stories that warm your soul</p>
                 </div>
                 <div class="mood-card" data-mood="adventurous">
-                    <div class="mood-icon">🗺️</div>
+                    <div class="mood-icon"></div>
                     <h3>Adventurous</h3>
                     <p>Epic journeys and daring quests</p>
                 </div>
                 <div class="mood-card" data-mood="mysterious">
-                    <div class="mood-icon">🔍</div>
+                    <div class="mood-icon"></div>
                     <h3>Mysterious</h3>
                     <p>Mind-bending mysteries and suspense</p>
                 </div>
